# ot-harjoitustyo_2022

./: README.md
dokumentaatio/: .$Logic graph.png.bkp  changelog.md  tuntikirjanpito.md
laskarit/: gitlog.txt
laskarit/Cyberpunk_Edgerunner/dokumentaatio/: .$Logic graph.png.dtmp  changelog.md
laskarit/Cyberpunk_Edgerunner/dokumentaatio/src/: main.py
laskarit/Cyberpunk_Edgerunner/dokumentaatio/src/Resources/: buttons.py
laskarit/Cyberpunk_Edgerunners/: README.md  game_state.py  main.py  movement.py  player.py  pyproject.toml  source_code.py  sprite.py
laskarit/Cyberpunk_Edgerunners/Resources/img/: buttons.pixil
laskarit/Cyberpunk_Edgerunners/dokumentaatio/: changelog.md  tuntikirjanpito.md
laskarit/Cyberpunk_Edgerunners/src/: fix.py  main.py
laskarit/Cyberpunk_Edgerunners/src/tests/: main_test.py
laskarit/viikko1/: komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: .$Laajempi sekvenssikaavio t4.png.bkp  .$Monopoli t1.png.bkp
poetry-testi/: pyproject.toml
