[tool.poetry]
name = "dokumentaatio"
version = "0.1.0"
description = ""
authors = ["Kirin <kirin.porsti@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pylint = "^2.15.8"
invoke = "^1.7.3"
graphviz = "^0.20.1"
pydot = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
